tests/compile-fail/integration_suite__integration__ecl_features__eosd_exported_fn_bad_siggies.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: invalid type for param in EoSD ECL
  ┌─ <input>:7:11
  │
7 │ void bad2(var x) {}
  │           ^^^

error: too many int params for EoSD ECL function
  ┌─ <input>:9:18
  │
9 │ void bad3(int x, int y) {}
  │                  ^^^^^ second int param
  │
  = EoSD ECL functions are limited to 1 int and 1 float

error: too many float params for EoSD ECL function
   ┌─ <input>:11:27
   │
11 │ void bad4(float x, int y, float z) {}
   │                           ^^^^^^^ second float param
   │
   = EoSD ECL functions are limited to 1 int and 1 float


